force-app/main/default/objects/KimbleOne__InvoiceFormat__c/KimbleOne__InvoiceFormat__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Invoice Format</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Formats</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>