force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__CreditAdjustmentNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditAdjustmentNarrative__c</fullName>
    <label>Credit Adjustment Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>