force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__CreditNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNarrative__c</fullName>
    <label>Credit Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>