force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__DateRangeNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DateRangeNarrative__c</fullName>
    <inlineHelpText>Date range narrative used by narrative sources, where {0} is the minimum date and {1} is the maximum date.</inlineHelpText>
    <label>Date Range Narrative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>