force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__DepositAdjustmentNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DepositAdjustmentNarrative__c</fullName>
    <label>Deposit Adjustment Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>