force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__DepositNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DepositNarrative__c</fullName>
    <label>Deposit Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>