force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__DiscountItemNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DiscountItemNarrative__c</fullName>
    <label>Discount Item Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>