force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ExpenseItemGroupingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemGroupingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule used to group Expense Items on Invoice</description>
    <label>Z_Obsolete - Expense Item Grouping Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ExpenseItemGroupingRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoice Formats (Expense Item Grouping Rule)</relationshipLabel>
    <relationshipName>Invoice_Formats_Expense</relationshipName>
    <type>Lookup</type>
</CustomField>