force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ExpenseItemNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItemNarrative__c</fullName>
    <description>Used to generate Invoice Line containing Expense Item.</description>
    <label>Expense Item Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>