force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__GroupingConfigurationJson__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__GroupingConfigurationJson__c</fullName>
    <label>Grouping Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>