force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeCredit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Credit</label>
    <type>Checkbox</type>
</CustomField>