force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeCreditAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeCreditAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Credit Adjustment</label>
    <type>Checkbox</type>
</CustomField>