force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeDeposit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeDeposit__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Deposits in an Auto generated invoice.</inlineHelpText>
    <label>Include Deposit</label>
    <type>Checkbox</type>
</CustomField>