force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeDepositAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeDepositAdjustment__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Deposit Adjustments in an Auto generated invoice.</inlineHelpText>
    <label>Include Deposit Adjustment</label>
    <type>Checkbox</type>
</CustomField>