force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeExpenseItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeExpenseItem__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Expense Items in an Auto generated invoice.</inlineHelpText>
    <label>Include Expense Item</label>
    <type>Checkbox</type>
</CustomField>