force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeInternalRevenueShare__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeInternalRevenueShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Internal Revenue Share</label>
    <type>Checkbox</type>
</CustomField>