force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeMilestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specify whether to include Milestones in an Auto generated invoice.</inlineHelpText>
    <label>Include Milestone</label>
    <type>Checkbox</type>
</CustomField>