force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludePeriodCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludePeriodCost__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Period Costs in an Auto generated supplier invoice.</inlineHelpText>
    <label>Include Period Cost</label>
    <type>Checkbox</type>
</CustomField>