force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludePeriodRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludePeriodRevenue__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Period Revenues in an Auto generated invoice.</inlineHelpText>
    <label>Include Period Revenue</label>
    <type>Checkbox</type>
</CustomField>