force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeRevenueAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeRevenueAdjustment__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Revenue Adjustments in an Auto generated invoice.</inlineHelpText>
    <label>Include Revenue Adjustment</label>
    <type>Checkbox</type>
</CustomField>