force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IncludeTimeEntry__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeTimeEntry__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specify whether to include Time Entries in an Auto generated invoice.</inlineHelpText>
    <label>Include Time Entry</label>
    <type>Checkbox</type>
</CustomField>