force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__InternalRevenueShareNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalRevenueShareNarrative__c</fullName>
    <label>Internal Revenue Share Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>