force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__InvoiceMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceMode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Auto - generated automatically on a schedule, Manual - generate the invoice from the user interface (default), OffSystem - invoice is generated outside of Kimble.</inlineHelpText>
    <label>Invoice Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InvoiceMode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoice Formats (Invoice Mode)</relationshipLabel>
    <relationshipName>InvoiceFormats</relationshipName>
    <type>Lookup</type>
</CustomField>