force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IsSinglePurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSinglePurchaseOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Invoice applies to a Single Purchase Order, or whether each Invoice Line may have a different PO.</description>
    <label>Z_Obsolete - Is Single Purchase Order</label>
    <type>Checkbox</type>
</CustomField>