force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__IsSupplier__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supplier invoice format for use on Supplier Invoices.</description>
    <inlineHelpText>Supplier invoice format for use on Supplier Invoices.</inlineHelpText>
    <label>Is Supplier</label>
    <type>Checkbox</type>
</CustomField>