force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__MilestoneNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MilestoneNarrative__c</fullName>
    <description>Used to generate Invoice Line containing Milestone.</description>
    <label>Milestone Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>