force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__NumberOfUnitsNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfUnitsNarrative__c</fullName>
    <inlineHelpText>Number of units narrative used by narrative sources, where {0} is the number and {1} is the unit type.</inlineHelpText>
    <label>Number Of Units Narrative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>