force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__PeriodCostGroupingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodCostGroupingRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Z_Obsolete - Period Cost Grouping Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PeriodCostGroupingRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoice Formats (PeriodCostGroupingRule)</relationshipLabel>
    <relationshipName>InvoiceFormatsPeriodCostGroupingRule</relationshipName>
    <type>Lookup</type>
</CustomField>