force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__PeriodCostNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodCostNarrative__c</fullName>
    <description>Used to generate Invoice Line containing Period Cost.</description>
    <label>Period Cost Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>