force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__PeriodRevenueGroupingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodRevenueGroupingRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Z_Obsolete - Period Revenue Grping Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>PeriodRevenueGroupRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoice Formats (PeriodRevenueGroupingRule)</relationshipLabel>
    <relationshipName>InvoiceFormatsPeriodRevenueGroupingRule</relationshipName>
    <type>Lookup</type>
</CustomField>