force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__PeriodRevenueNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodRevenueNarrative__c</fullName>
    <description>Used to generate Invoice Line containing Period Revenue.</description>
    <label>Period Revenue Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>