force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__RatePerUnitNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RatePerUnitNarrative__c</fullName>
    <inlineHelpText>Rate per unit narrative used by narrative sources, where {0} is the currency, {1} is the rate and {2} is the unit type.</inlineHelpText>
    <label>Rate Per Unit Narrative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>