force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__RatePerUnitPerPeriodNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RatePerUnitPerPeriodNarrative__c</fullName>
    <inlineHelpText>Rate per unit narrative used by narrative sources, where {0} is the currency, {1} is the rate, {2} is the rate unit type and {3} is the period type.</inlineHelpText>
    <label>Rate Per Unit Per Period Narrative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>