force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__RevenueAdjustmentNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueAdjustmentNarrative__c</fullName>
    <label>Revenue Adjustment Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>