force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__RoundingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RoundingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rounding Rule</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoice Formats (Rounding Rule)</relationshipLabel>
    <relationshipName>InvoiceFormatsRoundingRule</relationshipName>
    <type>Lookup</type>
</CustomField>