force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowContext__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowContext__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows the invoice / credit note context (i.e. delivery engagement / delivery element / account details) on the invoice, normally shown above the invoice line details.</inlineHelpText>
    <label>Show Context</label>
    <type>Checkbox</type>
</CustomField>