force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowLineNumbers__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowLineNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the line numbers on the invoice / credit note</description>
    <label>Z_Obsolete - Show Line Numbers</label>
    <type>Checkbox</type>
</CustomField>