force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowLogo__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Show Logo</label>
    <type>Checkbox</type>
</CustomField>