force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowPageNumbers__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowPageNumbers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Z_Obsolete - Show Page Numbers</label>
    <type>Checkbox</type>
</CustomField>