force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowResourceNumberOfUnitsInColumn__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowResourceNumberOfUnitsInColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show Time Entry number of units column when showing time in tabular format.</inlineHelpText>
    <label>Show Number Of Units In Column</label>
    <type>Checkbox</type>
</CustomField>