force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowResourceNumberOfUnitsInNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowResourceNumberOfUnitsInNarrative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Show No Of Units In Nrrtve</label>
    <type>Checkbox</type>
</CustomField>