force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowResourceRateInColumn__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowResourceRateInColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show Time Entry resource rate column when showing time in tabular format.</inlineHelpText>
    <label>Show Resource Rate In Column</label>
    <type>Checkbox</type>
</CustomField>