force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowResourceRateInNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowResourceRateInNarrative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Show Resrce Rate In Nrrtve</label>
    <type>Checkbox</type>
</CustomField>