force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__ShowTimeInTabularFormat__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowTimeInTabularFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show Time Entry line with two columns, one for resource rate and one for the number of units.</inlineHelpText>
    <label>Show Time In Tabular Format</label>
    <type>Checkbox</type>
</CustomField>