force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__SingleDateNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SingleDateNarrative__c</fullName>
    <inlineHelpText>Single date narrative used by narrative sources, where {0} is the date.</inlineHelpText>
    <label>Single Date Narrative</label>
    <length>50</length>
    <type>Text</type>
</CustomField>