force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__TimeEntryGroupingRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntryGroupingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule used to group Time Entries on Invoice.</description>
    <label>Z_Obsolete - Time Entry Grouping Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TimeEntryGroupingRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Invoice Formats (Time Entry Grouping Rule)</relationshipLabel>
    <relationshipName>Invoice_Formats_TimeEntry</relationshipName>
    <type>Lookup</type>
</CustomField>