force-app/main/default/objects/KimbleOne__InvoiceFormat__c/fields/KimbleOne__TimeEntryNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntryNarrative__c</fullName>
    <description>Used to generate Invoice Line containing Time Entries</description>
    <label>Time Entry Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>