force-app/main/default/objects/KimbleOne__InvoiceFormat__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__IsSupplier__c</columns>
    <columns>KimbleOne__IsInternal__c</columns>
    <columns>KimbleOne__ExpenseItemGroupingRule__c</columns>
    <columns>KimbleOne__MilestoneNarrative__c</columns>
    <columns>KimbleOne__PeriodRevenueNarrative__c</columns>
    <columns>KimbleOne__TimeEntryGroupingRule__c</columns>
    <columns>KimbleOne__ShowTimeInTabularFormat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>